--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         :root {
             --color-primary: #dc2626;
             --color-primary-dark: #991b1b;
-            --color-secondary: #667eea;
-            --color-secondary-dark: #764ba2;
+            --color-secondary: #f7f8fc;
+            --color-secondary-dark: #f6f4f8;
             --color-white: #ffffff;
             --color-gray-100: #f3f4f6;
             --color-gray-200: #e5e7eb;
@@ -31,7 +31,7 @@
             margin: 0;
             padding: 0;
             scroll-behavior: smooth;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #eeeff1 0%, #f9f8fa 100%);
             min-height: 100vh;
         }
 
